fix css visible symbol in tree plugin

--- a/resources/assets/admin/css/app.less
+++ b/resources/assets/admin/css/app.less
@@ -106,6 +106,7 @@ body{background: white;}
   background:         linear-gradient(top, #ddd 0%, #bbb 100%);
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
+  font-size: 0;
 }
 .dd3-handle:before { content: '\2261'; display: block; position: absolute; left: 0; top: 3px; width: 100%; text-align: center; text-indent: 0; color: #fff; font-size: 20px; font-weight: normal; }
 .dd3-handle:hover { background: #ddd; }
